--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 
                                     /*import_design*/
 @import "../sass/Layout/header";                                      
-
+@import "../sass/Layout/footer";
 
 
 
