--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,9 @@
 @import "../sass/Layout/loading-anim";
 
                                     /*import_design*/
-@import "../sass/Layout/header";                                      
+@import "../sass/Layout/header"; 
+@import "../sass/Composant/card-functionning";
+@import "../sass/Composant/button";                                     
 @import "../sass/Layout/footer";
 
 
