--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
 /*─────────────────────────────────────────────────────────────────────────────────────────────────*/
 /*─────────────────────────────────────────────────────────────────────────────────────────────────*/
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap");
 *, *:after, *:before {
   box-sizing: border-box;
 }
@@ -458,6 +459,275 @@ input {
     width: 15%;
   }
 }
+/*import_general*/ /*─────────────────────────────────────────────────────────────────────────────────────────────────*/
+/*─────────────────────────────────────────────────────────────────────────────────────────────────*/
+/*─
+/*─                                                                                      RESET
+/*─
+/*─────────────────────────────────────────────────────────────────────────────────────────────────*/
+/*─────────────────────────────────────────────────────────────────────────────────────────────────*/
+*, *:after, *:before {
+  box-sizing: border-box;
+}
+
+html {
+  -webkit-text-size-adjust: none; /*─ Debug font size on iphone when landscape orientation ─*/
+  -webkit-font-smoothing: subpixel-antialiased; /*─ Debug safari font weight when fixed element on the page ─*/
+  -webkit-font-smoothing: antialiased; /*─ idem : Debug safari font weight when fixed element on the page ─*/
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  list-style: none;
+}
+
+input, textarea, select, button {
+  display: block;
+  box-sizing: border-box;
+  border-radius: 0;
+  outline: none;
+  border: none;
+  background: none;
+  color: inherit;
+}
+
+input:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
+input[type=submit]:hover,
+button:hover {
+  cursor: pointer;
+}
+
+input::-ms-clear {
+  display: none; /*─ IE11 → remove cross to close ─*/
+}
+
+textarea {
+  overflow: auto; /*─ Hide scroll bar on IE ─*/
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+img, video, svg, picture {
+  display: block;
+}
+
+img, video {
+  width: 100%;
+  height: auto;
+}
+
+svg {
+  width: 100%;
+  height: 100%;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+}
+
+ul {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  color: white;
+}
+
+input {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 0.9rem;
+  color: #353535;
+}
+
+.titles {
+  font-family: "Shrikhand", cursive;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.new_headband p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 450;
+  font-size: 0.8rem;
+  color: #269d80;
+}
+
+.functionning_card--text {
+  font-family: "Roboto", sans-serif;
+  font-weight: 450;
+}
+
+.functionning_card > ::before {
+  font-family: "Roboto", sans-serif;
+  font-weight: 450;
+  font-size: 0.8rem;
+}
+
+/*restaurant_page_font*/
+.restaurant_titles h1 {
+  font-family: "Shrikhand", cursive;
+  font-weight: lighter;
+  font-size: 1.7rem;
+}
+
+.restaurant_menu h2 {
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  font-weight: 350;
+}
+.restaurant_menu .food-card--price, .restaurant_menu .food-card--meal_name {
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+}
+
+/*general_mixins*/
+/*mixin_animation*/
+/*mixins_functionning*/
+/*mixins_card_menu*/
+/*mixins_menu_appearance*/
+/*main_design*/
+.functionning_card {
+  display: flex;
+  align-items: flex-end;
+  cursor: pointer;
+}
+.functionning_card--1 {
+  display: flex;
+  align-items: center;
+  width: 95%;
+  height: 70px;
+  border-radius: 15px;
+  margin: 10px 0 10px 0;
+  background: #f6f6f6;
+  box-shadow: #a5a5a5 0 5px 10px;
+}
+.functionning_card--1::before {
+  content: "1";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 15px 0 0;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  position: relative;
+  left: -12px;
+  background-color: #9356DC;
+  color: white;
+}
+.functionning_card--1:hover {
+  background-color: #f5edff;
+  transition: 0.2s ease-in;
+}
+.functionning_card--1:hover i {
+  color: #9356DC;
+}
+.functionning_card--2 {
+  display: flex;
+  align-items: center;
+  width: 95%;
+  height: 70px;
+  border-radius: 15px;
+  margin: 10px 0 10px 0;
+  background: #f6f6f6;
+  box-shadow: #a5a5a5 0 5px 10px;
+}
+.functionning_card--2::before {
+  content: "2";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 15px 0 0;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  position: relative;
+  left: -12px;
+  background-color: #9356DC;
+  color: white;
+}
+.functionning_card--2:hover {
+  background-color: #f5edff;
+  transition: 0.2s ease-in;
+}
+.functionning_card--2:hover i {
+  color: #9356DC;
+}
+.functionning_card--3 {
+  display: flex;
+  align-items: center;
+  width: 95%;
+  height: 70px;
+  border-radius: 15px;
+  margin: 10px 0 10px 0;
+  background: #f6f6f6;
+  box-shadow: #a5a5a5 0 5px 10px;
+}
+.functionning_card--3::before {
+  content: "3";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 15px 0 0;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  position: relative;
+  left: -12px;
+  background-color: #9356DC;
+  color: white;
+}
+.functionning_card--3:hover {
+  background-color: #f5edff;
+  transition: 0.2s ease-in;
+}
+.functionning_card--3:hover i {
+  color: #9356DC;
+}
+.functionning_card--icon {
+  font-size: 1.2rem;
+  color: #7e7e7e;
+  margin-right: 30px;
+}
+
 .footer {
   height: 180px;
   width: 100%;
